--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "my-react-app",
   "version": "1.0.0",
+  "type": "module",
   "description": "A React application for user registration, task posting, and trade functionality.",
   "main": "src/index.js",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "node server.js",
+    "dev": "react-scripts start",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -15,21 +20,37 @@
     "task exchange",
     "collaboration"
   ],
-  "author": "Your Name",
+  "author": "John Roberts",
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "firebase": "^11.2.0",
+    "express": "^4.17.1",
+    "firebase": "^9.0.0",
     "mongoose": "^8.9.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "react-scripts": "5.0.1",
+    "react-router-dom": "^5.2.0"
   },
-  "homepage": "http://yourhomepage.com",
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.18.6"
+  },
+  "homepage": "https://github.com/johnroberts/my-react-app",
   "repository": {
     "type": "git",
-    "url": "http://github.com/yourusername/my-react-app.git"
+    "url": "https://github.com/johnroberts/my-react-app.git"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
